<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="br.com.takeaway.ActivityDadosChamado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/facaSeuPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/insercaoDadosSolicitacaoDadosChamado"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/quantidade"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/editTextQuantidade"
            android:maxLength="@integer/editTextMaxLength"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/peso"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerPesos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Coberturas -->

        <TextView
            android:id="@+id/coberturas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/coberturas"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/coberturaMorango"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coberturaDeMorango"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/coberturaCupuacu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coberturaDeCupuacu"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/coberturaAbacaxi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coberturaDeAbacaxi"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp">

                <CheckBox
                    android:id="@+id/coberturaChocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coberturaDeChocolate"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/coberturaLeiteCondensado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leiteCondensado"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/coberturaKiwi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coberturaDeKiwi"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/coberturaMel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mel"
            android:textSize="16sp" />

        <!-- Acompanhamentos -->

        <TextView
            android:id="@+id/acompanhamentos1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/acompanhamentos"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/acompanhamentos2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/acompanhamentosContinuacao"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/acompanhamentoAbacate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abacate"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/acompanhamentoCupuacu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cupuacu"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/acompanhamentoKiwi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kiwi"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/acompanhamentoAbacaxi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abacaxi"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/acompanhamentoMorango"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morango"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/acompanhamentoGranola"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/granola"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/acompanhamentoBanana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banana"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/precoFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/precoFinal"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrecoFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonConfirmarPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="#6A2880"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:text="@string/buttonConfirmarPedido" />

    </LinearLayout>

</ScrollView>