<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="br.com.takeaway.ActivityConfirmacao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewConfirmaDadosDeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/confirmarDadosDeCadastro"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/confirmaNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/nome"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmaSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sobrenome"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmaDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/dataDeNascimento"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmaCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/cpf"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmaEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/endereco"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmaTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/telefone"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmaEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:hint="@string/senha"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=""
            android:layout_marginBottom="16dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonFinalizarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonFinalizarCadastro"
            android:background="#6A2880"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="18sp"/>

    </LinearLayout>

</ScrollView>