<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E5F5"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context="br.com.takeaway.ActivityFinalizaCadastro">

    <TextView
        android:id="@+id/cadastroFinalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:text="@string/cadastroFinalizado"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonVoltaParaATelaPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonVoltaParaATelaPrincipal"
        android:background="#6A2880"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/buttonVoltaParaATelaDeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6A2880"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="8dp"
        android:layout_above="@id/buttonVoltaParaATelaPrincipal"
        android:text="@string/buttonVoltaParaATelaDeLogin"
        android:textSize="16sp"/>

</RelativeLayout>
