<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="br.com.takeaway.ActivityLogin">

        <TextView
            android:id="@+id/textViewInserirCredenciaisAtendente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/inserirLoginESenha"
            android:textSize="24sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/atendenteLogin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/logo_login_atendente" />

        <EditText
            android:id="@+id/editTextLoginAtendente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:hint="@string/editTextLogin"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextSenhaAtendente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/editTextSenha"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonValidaInfoAtendente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#6A2880"
            android:textColor="#FFFFFF"
            android:text="@string/submitButton"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>